--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ main {
   width: 800px;
   height: 100vh;
   margin-top: 50px;
+  margin-left: 8px;
 }
 
 header {
@@ -26,12 +27,17 @@ header {
 
 h1 {
   position: fixed;
-  background-color: white;
+  background-color: rgb(86 86 86);
   width: 100vw;
   height: 40px;
   top: 0;
-  left: 0;
+  left: -8px !important;
   z-index: 999;
+  padding-top: 10px;
+  padding-left: 8px;
+  margin-top: 0px;
+  margin-left: 8px;
+  color: white !important;
 }
 
 h1, h2{
@@ -40,6 +46,11 @@ h1, h2{
 
 li:not(#navbar ul li) {
   margin: 1.2rem;
+}
+
+#navbar {
+  padding-top: 60px;
+  padding-left: 8px;
 }
 
 #navbar ul {
