--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,37 @@
+* {
+  /** border: 1px solid black; **/
+}
+
 html {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5rem;
   color: rgb(89, 85, 85);
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
+p {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 main {
-  width: 800px;
-  height: 100vh;
   margin-top: 50px;
   margin-left: 8px;
+  padding-bottom: 10px;
 }
 
 header {
-  width: 800px;
+  width: 100%;
   height: auto;
   min-width: 300px;
 }
@@ -28,20 +39,19 @@ header {
 h1 {
   position: fixed;
   background-color: rgb(86 86 86);
-  width: 100vw;
+  width: 100%;
   height: 40px;
   top: 0;
-  left: -8px !important;
+  padding-left: 8px;
   z-index: 999;
   padding-top: 10px;
-  padding-left: 8px;
   margin-top: 0px;
-  margin-left: 8px;
-  color: white !important;
+  color: white;
 }
 
-h1, h2{
+h2 {
   color: rgb(31, 31, 31);
+  padding-left: 8px;
 }
 
 li:not(#navbar ul li) {
@@ -50,7 +60,6 @@ li:not(#navbar ul li) {
 
 #navbar {
   padding-top: 60px;
-  padding-left: 8px;
 }
 
 #navbar ul {
@@ -61,19 +70,23 @@ li:not(#navbar ul li) {
 #navbar li {
   list-style: none;
   border-bottom: 1px solid black;
-  padding: 0.5rem 0;
+  padding: 0.5rem 0 0.5rem 8px;
 }
 
 #navbar a {
   text-decoration: none;
-  color: inherit;  
+  color: inherit;
+  background-color: transparent;
+  border-radius: 2px;
+  padding: 5px 10px;
+  transition: all 0.3s ease;
 }
 
 #navbar a:hover {
   color: white;
   background-color: rgb(89, 85, 85);
   border-radius: 2px;
-  padding: 1px 4px;
+  padding: 5px 10px;
 }
 
 #data_types li:nth-child(n+2):nth-child(-n+7) {
@@ -87,28 +100,28 @@ code {
   padding: 1.5rem 1rem;
   margin: 2rem 1rem;
   border-radius: 5px;
+  width: 90%;
 }
 
 @media (min-width: 1024px) {
   header {
     position: fixed;
-    top: 2px;
-    left: 8px;
+    top: 2px; 
     width: 300px;
-    overflow-y: auto;
-    overflow-x: hidden;
   }
 
   main {
-    margin-top: 60px;
+    margin-top: 65px;
     margin-left: 330px;
-    width: 600px;
+    width: 100%;
   }
-
-  h1 {
-    position: fixed;
-    top: 0;
-    left: 8px;
+  
+  #navbar li {
+    padding-left: 8px;
+  }
+  
+  p, #main-doc ul, code {
+    margin-right: 350px;
   }
   
 }
